[Feature]: Replace the custom config GUI with a YACL implementation (#806)
* feat: Replace custom config GUI with a YACL implementation

* feat: Add config entries to the GUI and add a debug category

* refactor: Re-add list config options to the GUI

* refactor: Re-add config saving to the GUI

* fix: Set default value of `enableRepairKits` to `true` in the GUI

* chore: Add/update the config GUI's language entries

* fix: Fix parent mod ID

This fixes the display of Forgero and its packs in Mod Menu.

* Revert "fix: Fix parent mod ID"

This reverts commit 2c713c5616706e5935d391de93bc16ea8de45e54.

* fix: Fix `forgero-fabric-core`'s parent mod ID

* fix: Fix typo with `forgero-fabric-core`'s parent mod ID

* Switched from mixin to using official api for setting config to the fabric wrapper mod

* Added parent modmenu config to all child mods

* refactor: Remove unused config `en_us` translation file in the bows module

* Improved description for all mods

* refactor: Re-add remaining missing config options to the config GUI

Also renamed a config option to adhere to the naming scheme.

* refactor: Make YACL optional

* chore: Change module descriptions for consistency

* chore: Fix capital letter typo

* chore: Improve config tooltips

* refactor: Split the config screen builder into multiple methods

---------

Co-authored-by: sigmund <sigmundsgranaas@gmail.com>